# JCEngine

./: .gitignore  CMakeLists.txt  README.md  run.cmd
include/: jc_base.h  jc_ds.h  jc_entry.h  jc_event.h  jc_image.h  jc_math.h  jcengine.h
src/: gpuTriangle.cpp  main.cpp  test.cpp
src/shaders/: shader.frag
src/subsys/: ds.cpp  entry.cpp  event.cpp  image.cpp  util.cpp
